# MCP_apps

./: README.md
App_QT/: README.md  hello.c
App_QT/HMI/: HMI.pro  README.md  main.cpp  mainwindow.cpp  mainwindow.h  qmake_qmake_qm_files.qrc  resources.qrc
App_open_file/: CMakeLists.txt  README.md
App_plot/: README.md  app.c  plot.py
mqtt/: consumer.cpp  producer.cpp  pub-pika.py  pypub.py  pysub.py  readme.md  sub-pika.py  tesamqp.cpp
